@@ -94,6 +94,8 @@ void gedit_warning (GtkWindow *parent, gchar *format, ...);
 gchar *gedit_utils_str_middle_truncate (const char *string,
 					guint truncate_length);
 
+gchar *gedit_utils_make_valid_utf8 (const char *name);
+
 #endif /* __GEDIT_UTILS_H__ */
 
 
