@@ -1,4 +1,10 @@
-2004-10-05  Paolo Borelli  <pborelli@katamail.com>
+2004-10-24  Paolo Borelli  <pborelli@katamail.com>
+
+	* gedit-document.c:
+	* gedit-file.c:
+	* gedit-utils.[ch]: remove more eel functions.
+
+2004-10-24  Paolo Borelli  <pborelli@katamail.com>
 
 	* gedit-file-selector-util.c: always return uris.
 	* gedit-file.c: code cleanup.
